examples/v0.9/errors/identifier_not_exported.nova
import secret from modules.greetings